[package]
name = "rust-utils"
version = "0.1.0"
edition = "2021"

[features]
default = ["format", "errors", "hyperlink"]
errors = []
format = []
hyperlink = ["dep:url"] # maybe make a wrapping feature for terminal specific stuff
concurrent_logs = ["dep:termcolor"]

[dependencies]
termcolor = { version = "1.4.1", optional = true }
tokio = { version = "1.38.0", default-features = false, features = ["macros", "rt", "sync", "time"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.2", optional = true }

[dev-dependencies]
derive_more = "0.99.18"
